# SafeTunnels

./: .gitignore  .project  CMDUtilities.txt  CMakeLists.txt  README.md
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.egit.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
DBs/: SafeTunnelsCoojaDB_clean.sql  SafeTunnelsPhyDB_clean.sql
Graphana/Dashboards/: SafeTunnels Cooja Dashboard-1686978398542.json  SafeTunnels Cooja Dashboard-1687052386729.json  SafeTunnels Physical Dashboard-1686978347245.json  SafeTunnels Physical Dashboard-1687052334557.json
contikiNG_devices/: CMakeLists.txt  SensorsCloudModuleSim.csc
contikiNG_devices/.metadata/: version.ini
contikiNG_devices/.metadata/.mylyn/.taskListIndex/: segments_1
contikiNG_devices/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
contikiNG_devices/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
contikiNG_devices/src/actuator/: actuator.c  actuator.h
contikiNG_devices/src/actuator/resources/: actuatorErrors.h  fan.c  light.c
contikiNG_devices/src/border-router/: border-router.c
contikiNG_devices/src/common/: devUtilities.c  devUtilities.h
contikiNG_devices/src/sensor/: Makefile  project-conf.h  sensor.c  sensor.h
contikiNG_devices/utils/: Devices Flashing and Deploying Quick Guide.txt  SafeTunnels nrf52840 MAC-IP Bindings.xlsx
contikiNG_devices/utils/getPhyMACAndIP/: Makefile  getPhyMACAndIP.c  project-conf.h
devices/actuator/: Makefile  actuator.c  actuator.h  project-conf.h
devices/actuator/resources/: actuatorErrors.c  actuatorErrors.h  fan.c  light.c
devices/border-router/: Makefile
devices/common/: devUtilities.c  devUtilities.h
devices/rpl-border-router/: Makefile
devices/sensor/: .cproject  How to test.txt  Makefile  sensor.c  sensor.h
devices/sensor/sensorErrors/: sensorErrors.c  sensorErrors.h
java_modules/: Californium3.properties  dependency-reduced-pom.xml  pom.xml
java_modules/CloudModule/: dependency-reduced-pom.xml  pom.xml
java_modules/CloudModule/src/main/java/CloudModule/: CloudModule.java  CloudModuleErrCode.java  CloudMySQLConnector.java  CloudMySQLConnectorErrCode.java  CloudSensorManager.java  CloudSensorsMQTTHandler.java  CloudSensorsMQTTHandlerErrCode.java
java_modules/Common/: dependency-reduced-pom.xml  pom.xml
java_modules/Common/src/main/java/devices/: BaseDevice.java  DevErrCode.java
java_modules/Common/src/main/java/devices/actuator/: BaseActuator.java  (+1 more)
java_modules/Common/src/main/java/errors/: DevErrCodeExcp.java  ErrCode.java  ErrCodeExcp.java  ErrCodeInfo.java  ErrCodeSeverity.java  ModuleErrCode.java
java_modules/Common/src/main/java/logging/: Log.java
java_modules/ControlModule/: dependency-reduced-pom.xml  pom.xml
java_modules/ControlModule/JAR/: Californium3.properties
java_modules/ControlModule/src/main/java/: ANSIColorPane.java  ControlModule.form  ControlModule.java  JTextAreaOutputStream.java  SensorWidget.form  SensorWidget.java
java_modules/ControlModule/src/main/java/ControlModule/: ControlModule.form  ControlModule.java  ControlMySQLConnector.java  ControlSensorsMQTTHandler.java  OpState.java
java_modules/ControlModule/src/main/java/DevicesManagers/: ControlSensorManager.java  SensorManager.java
java_modules/ControlModule/src/main/java/GUILogging/: ANSIColorPane.java  ANSIColorPaneOutputStream.java
java_modules/ControlModule/src/main/java/Parameters/: OperatingState.java
java_modules/JARs/: Californium3.properties
java_modules/src/main/java/devices/: BaseDevice.java  DevErrCode.java  Device.java  DeviceErrCode.java
java_modules/src/main/java/devices/actuator/: Actuator.java  ActuatorErrCode.java  ActuatorError.java  BaseActuator.java  BaseActuatorErrCode.java  LightState.java
java_modules/src/main/java/devices/sensor/: BaseSensor.java  BaseSensorErrCode.java  Sensor.java  SensorErrCode.java  SensorError.java
java_modules/src/main/java/errors/: DevErrCodeExcp.java  ErrCode.java  ErrCodeExcp.java  ErrCodeInfo.java  ErrCodeSeverity.java  ModuleErrCode.java  SafeTunnelsErrCode.java
java_modules/src/main/java/logging/: Log.java
java_modules/src/main/java/logging/errors/: DevicesErrInfoMaps.java  ErrCodeInfo.java  ErrCodeSeverity.java
java_modules/src/main/java/modules/: SensorsMQTTHandler.java  SensorsMQTTHandlerErrCode.java
java_modules/src/main/java/modules/InputArgsParser/: InputArgsParser.java
java_modules/src/main/java/modules/MySQLConnector/: DevMACIDPair.java  MySQLConnector.java  MySQLConnectorErrCode.java
(+39 files in other folders)
